# cookiecutter-plone-cyclop

./: README.md  cookiecutter.json
{{ cookiecutter.target }}/backend/: .gitignore  Makefile  constraints.txt  instance.yaml  mx.ini  pyproject.toml  requirements.txt
{{ cookiecutter.target }}/backend/src/{{ cookiecutter.project }}/: configure.zcml  testing.py
{{ cookiecutter.target }}/backend/test/: conftest.py
